--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^14.0.0",
@@ -15,6 +21,7 @@
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/react-scroll": "^1.8.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "postcss-cli": "^10.1.0",
@@ -22,7 +29,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-scroll-to-top": "^3.0.0",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "web-vitals": "^3.4.0"
